--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
             <div class="alert alert-danger"><font size="3"><%= error %></font></div>
         <% } %>
         <% if(locals.success) { %>
-            <div class="alert alert-success"><%= success %></div>
+            <div class="alert alert-success"><font size="3"><%= success %></font></div>
         <% } %>
       <div class="logoPole"> 
 
